fix: Adjust heading alignment and add fontawesome icon to basket template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -330,6 +330,10 @@ footer {
 
 /* **** Shopping Basket **** */
 
+.custom-select {
+    margin-bottom: 1rem;
+}
+
 .input-group-selector {
     width:74%;
 }
